<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    
<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">

<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

        
    <TextView
        android:id="@+id/activity_complain_TViewAttachment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/activity_complain_TViewSelectItem"
        android:textColor="#333"
        android:textSize="14sp" />
    
    
    <Button
        android:id="@+id/activity_complain_BtnAttachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/activity_complain_BtnSelectItemText"
        android:textColor="#333"
        android:textSize="14sp"
        android:gravity="center" />
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/activity_complain_TViewSubject"
        android:textColor="#333"
        android:textSize="14sp" />
    
    <EditText
        android:id="@+id/activity_complain_ETxtSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:textColor="#333"
        android:inputType="textMultiLine"
        android:hint="@string/activity_complain_ETxtSubjectHint" >
        
    </EditText>
    
	   
       <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/activity_complain_TViewDescriptionText"
        android:textColor="#333"
        android:textSize="14sp" />
    
    <EditText
        android:id="@+id/activity_complain_ETxtDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/activity_complain_ETxtDescriptionHint"
        android:inputType="textMultiLine"
        android:paddingBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="30dp"
        android:textColor="#333"
        android:textSize="14sp" >
        
    </EditText>
    
    
    <Button
        android:id="@+id/activity_complain_BtnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:text="@string/activity_complain_BtnSubmitText"
        android:textColor="#333"
        android:textSize="14sp"
        android:gravity="center" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>