<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/activity_settings_TviewTextSetting1"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginBottom="2dp" />
		
		    <EditText
		        android:id="@+id/activity_settings_EtText1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/activity_settings_HintEtText1"
		        android:ems="10" >
		    </EditText>
		            
		    <Button
		        android:id="@+id/activity_settings_BtnSave"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:gravity="left|center_vertical"
		        android:text="@string/activity_settings_BtnSaveText"
		        android:layout_marginTop="10dp" />

		</LinearLayout>
    </ScrollView>

</LinearLayout>
